--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="template.css" />
+    <link rel="icon" href="assets/images/favicon.ico" />
     <title>SpaceX</title>
 </head>
 <body>
